Expand keyboard's using and fix some styles

--- a/music_instr.ui/app/simple-synth.component.html
+++ b/music_instr.ui/app/simple-synth.component.html
@@ -39,38 +39,38 @@
             <li class="key black" (mousedown)="playSound(frequencies['C#0'])" (mouseup)="muteSound(frequencies['C#0'])"></li>
             <li class="key white" (mousedown)="playSound(frequencies['D0'])" (mouseup)="muteSound(frequencies['D0'])"></li>
             <li class="key black" (mousedown)="playSound(frequencies['D#0'])" (mouseup)="muteSound(frequencies['D#0'])"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['E0'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['F0'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['F#0'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['G0'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['G#0'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['A0'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['A#0'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['H0'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['C1'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['C#1'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['D1'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['D#1'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['E1'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['F1'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['F#1'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['G1'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['G#1'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['A1'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['A#1'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['H1'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['C2'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['C#2'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['D2'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['D#2'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['E2'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['F2'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['F#2'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['G2'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['G#2'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['A2'])" (mouseup)="muteSound()"></li>
-            <li class="key black" (mousedown)="playSound(frequencies['A#2'])" (mouseup)="muteSound()"></li>
-            <li class="key white" (mousedown)="playSound(frequencies['H2'])" (mouseup)="muteSound()"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['E0'])" (mouseup)="muteSound(frequencies['E0'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['F0'])" (mouseup)="muteSound(frequencies['F0'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['F#0'])" (mouseup)="muteSound(frequencies['F#0'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['G0'])" (mouseup)="muteSound(frequencies['G0'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['G#0'])" (mouseup)="muteSound(frequencies['G#0'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['A0'])" (mouseup)="muteSound(frequencies['A0'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['A#0'])" (mouseup)="muteSound(frequencies['A#0'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['H0'])" (mouseup)="muteSound(frequencies['H0'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['C1'])" (mouseup)="muteSound(frequencies['C1'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['C#1'])" (mouseup)="muteSound(frequencies['C#1'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['D1'])" (mouseup)="muteSound(frequencies['D1'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['D#1'])" (mouseup)="muteSound(frequencies['D#1'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['E1'])" (mouseup)="muteSound(frequencies['E1'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['F1'])" (mouseup)="muteSound(frequencies['F1'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['F#1'])" (mouseup)="muteSound(frequencies['F#1'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['G1'])" (mouseup)="muteSound(frequencies['G1'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['G#1'])" (mouseup)="muteSound(frequencies['G#1'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['A1'])" (mouseup)="muteSound(frequencies['A1'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['A#1'])" (mouseup)="muteSound(frequencies['A#1'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['H1'])" (mouseup)="muteSound(frequencies['H1'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['C2'])" (mouseup)="muteSound(frequencies['C2'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['C#2'])" (mouseup)="muteSound(frequencies['C#2'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['D2'])" (mouseup)="muteSound(frequencies['D2'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['D#2'])" (mouseup)="muteSound(frequencies['D#2'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['E2'])" (mouseup)="muteSound(frequencies['E2'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['F2'])" (mouseup)="muteSound(frequencies['F2'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['F#2'])" (mouseup)="muteSound(frequencies['F#2'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['G2'])" (mouseup)="muteSound(frequencies['G2'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['G#2'])" (mouseup)="muteSound(frequencies['G#2'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['A2'])" (mouseup)="muteSound(frequencies['A2'])"></li>
+            <li class="key black" (mousedown)="playSound(frequencies['A#2'])" (mouseup)="muteSound(frequencies['A#2'])"></li>
+            <li class="key white" (mousedown)="playSound(frequencies['H2'])" (mouseup)="muteSound(frequencies['H2'])"></li>
         </ul>
     </div>
 </div>
