--- a/music_instr.ui/app/simple-synth.component.css
+++ b/music_instr.ui/app/simple-synth.component.css
@@ -117,6 +117,12 @@ div.range-block label {
     top: 10%;
     position: relative;
     float: left;
+
+    width: 20%;
+}
+
+div.range-block input {
+    margin-left: 10%;
 }
 
 div.panel-title {
