--- a/music_instr.ui/app/simple-synth.component.css
+++ b/music_instr.ui/app/simple-synth.component.css
@@ -1,6 +1,12 @@
-﻿div.synth {
-    height: 80vh;
+﻿label {
+    font-weight: normal;
+}
+
+div.synth {
+    height: 50vh;
     width: 80%;
+
+    min-height: 300px;
 
     margin: 0 auto;
     position: relative;
@@ -87,6 +93,8 @@ div.control-panel {
     height: 40%;
 
     overflow: hidden;
+
+    min-height: 150px;
 }
 
 div.control-panel.sliders-panel {
@@ -118,7 +126,7 @@ div.range-block label {
     position: relative;
     float: left;
 
-    width: 20%;
+    width: 30%;
 }
 
 div.range-block input {
@@ -133,6 +141,10 @@ div.panel-title {
     border: none;
 
     margin-left: 5px;
+}
+
+div.panel-title label {
+    white-space: nowrap;
 }
 
 input[type=range] {
@@ -228,19 +240,34 @@ input[type=range]:focus::-ms-fill-upper {
 div.control-panel-block {
     margin-left: 10px;
     margin-top: 2px;
+    margin-bottom: 5px;
 
     border: none;
+
+    width: 30%;
+    min-width: 180px;
+}
+
+div.control-panel-block label{
+    float: left;
+    width: 40%;
+    min-width: 80px;
+}
+
+div.control-panel-block select{
+    float: right;
 }
 
 div.wave-visualizer-container {
     display: block;
 
     width: 30%;
-    height: 25%;
+    height: 50%;
 
     min-height: 40px;
-    min-width: 120px;
+    min-width: 180px;
     border: 1px solid #000;
 
-    margin-top: 7px;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
