Start implementing the polyphonic synthesizer

--- a/music_instr.ui/app/app.component.html
+++ b/music_instr.ui/app/app.component.html
@@ -17,7 +17,7 @@
         </tab>
         <tab heading="Polyphonic synth">
             <div class="synth-container">
-                Coming soon
+                <polyphonic-synth>Loading polyphonic synth...</polyphonic-synth>
             </div>
         </tab>
     </tabset>
