Basic idea of a "plot" synthesizer

--- a/music_instr.ui/app/app.component.html
+++ b/music_instr.ui/app/app.component.html
@@ -23,6 +23,9 @@
             <li role="presentation" [class.active]="activeTab == 'polyphonic-synth'">
                 <a role="tab" data-toggle="tab" [routerLink]="['/polyphonic-synth']" (click)="setActiveTab('polyphonic-synth')">Polyphonic synth</a>
             </li>
+            <li role="presentation" [class.active]="activeTab == 'plot-synth'">
+                <a role="tab" data-toggle="tab" [routerLink]="['/plot-synth']" (click)="setActiveTab('plot-synth')">Plot synth</a>
+            </li>
         </ul>
     </div>
 
