--- a/music_instr.ui/styles.css
+++ b/music_instr.ui/styles.css
@@ -22,3 +22,208 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
+
+label {
+    font-weight: normal;
+}
+
+div.synth {
+    height: 50vh;
+    width: 100%;
+
+    min-height: 300px;
+
+    margin: 0 auto;
+    position: relative;
+
+    overflow: hidden;
+}
+
+/*common sliders and other control elements for a synth*/
+div.control-panel {
+    width: 45%;
+    height: 40%;
+
+    overflow: hidden;
+
+    min-height: 150px;
+
+    border: 1px solid #000
+}
+
+div.control-panel.sliders-panel {
+    position: absolute;
+    top: 10px;
+    right: 19px;   
+}
+
+div.control-panel.settings-panel {
+    position: absolute;
+    top: 10px;
+    left: 19px;   
+}
+
+div.range-block {
+    width: 50%;
+    height: 18%;
+
+    min-height: 25px;
+    min-width: 200px;
+    border: none;
+
+    margin-left: 10px;
+    margin-top: 2px;
+}
+
+div.range-block label {
+    top: 10%;
+    position: relative;
+    float: left;
+
+    width: 30%;
+    min-width: 70px;
+}
+
+div.range-block input {
+    margin-left: 10%;
+}
+
+div.panel-title {
+    width: 30%;
+    min-width: 100px;
+
+    margin-bottom: 15px;
+    border: none;
+
+    margin-left: 5px;
+}
+
+div.panel-title label {
+    white-space: nowrap;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  width: 60%;
+  /*margin: 13.8px 0;*/
+  margin-left: 5%;
+  margin-top: 2%;
+
+  min-height: 20px;
+  height: inherit;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4.4px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #898989;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 18px;
+  width: 15%; 
+  border-radius: 3px;
+  background: #ebebeb;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -9px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #898989;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #898989;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 18px;
+  width: 15%; 
+  border-radius: 3px;
+  background: #ebebeb;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 4.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #898989;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: #898989;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  width: 15px;
+  border-radius: 3px;
+  background: #ebebeb;
+  cursor: pointer;
+  height: 16px;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #898989;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #898989;
+}
+
+div.control-panel-block {
+    margin-left: 10px;
+    margin-top: 2px;
+    margin-bottom: 5px;
+
+    border: none;
+
+    width: 30%;
+    min-width: 180px;
+}
+
+div.control-panel-block label{
+    float: left;
+    width: 40%;
+    min-width: 80px;
+}
+
+div.control-panel-block select{
+    float: right;
+}
+
+div.wave-visualizer-container {
+    display: block;
+
+    width: 30%;
+    height: 50%;
+
+    min-height: 40px;
+    min-width: 180px;
+    border: 1px solid #000;
+
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
