Add tracking line animation for the plot synth.

--- a/music_instr.ui/app/plot-synth/plot-synth.component.html
+++ b/music_instr.ui/app/plot-synth/plot-synth.component.html
@@ -47,7 +47,7 @@
 
         <div class="plot-container">
             <canvas id="plot-synth-canvas" #plotCanvas (mousemove)="firePlotPoint($event)"
-                    (mouseup)="stopSound()" (mousedown)="startSound($event)">
+                    (mouseup)="stopSound($event)" (mousedown)="startSound($event)">
             </canvas>
         </div>
     </div>
