Set simple-synth as a default page.

--- a/music_instr.ui/app/app.component.html
+++ b/music_instr.ui/app/app.component.html
@@ -7,7 +7,8 @@
             Also, this is my 'Hello World' in Angular 2 and Typescript worlds.
         </p>
         <p>
-            Right now there are two instruments here: a simple monophonic synthesizer and a polyphonic one, both with a regular piano keyboard.
+            Right now there are 3 instruments here: a simple monophonic synthesizer, a polyphonic one, both with a regular piano keyboard. 
+            And "experimental" one, I call it a "plot synth".
         </p>
         <p class="additional-details">
             It's easy to hear that there are some bugs here: for example, I'm pretty sure that attack/release parameters don't work correctly.
